# sim

./: Cargo.toml
bindgen_macro/: Cargo.toml
bindgen_macro/src/: lib.rs
examples/: adder.html  index.html  logic.html  mips.html  mips.rs
graph/: Cargo.toml
graph/src/: lib.rs
src/: component.rs  lib.rs  sim.rs
src/components/: cpu.rs  logic.rs  mem.rs  mod.rs
