[package]
name = "sim-rs"
version = "0.1.0"
authors = ["Miguel \"Peppermint\" Robledo <migroble@ucm.es>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
slab = "0.4"
fnv = "1.0"
graph = { path = "./graph" }
bindgen_macro = { path = "./bindgen_macro" }
mips_emu = { path = "../mips_emu" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[[example]]
name = "mips"